<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvclaveTM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/clave"
            android:textColor="#000000"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="95dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvtituloTM"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/titulo"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvfechaTM"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/fecha"
            android:textColor="#000000"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvcantidad"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/cantidad"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/cbcompletada"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/completada"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btneditarTM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btneditar"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btneliminarTM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btneliminar"
            android:textSize="10sp" />

    </LinearLayout>
</LinearLayout>