<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvclave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/clave"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvtitulo"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/titulo"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/fecha"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btneditar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btneditar"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btneliminar"
            android:textSize="10sp" />

    </LinearLayout>
</LinearLayout>
