<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6A4"
    tools:context=".ModificarTareaM">

    <EditText
        android:id="@+id/txttituloMODTM"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textColorHint="#020202"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvfecharMODTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/fecharealizacion"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttituloMODTM" />

    <Button
        android:id="@+id/btnfechaMODTM"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:onClick="SeleccionarFecha"
        android:text="@string/fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvfecharMODTM" />

    <EditText
        android:id="@+id/txtfechaMODTM"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/vacio"
        android:inputType="none"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btnfechaMODTM"
        app:layout_constraintTop_toBottomOf="@+id/tvfecharMODTM" />

    <Button
        android:id="@+id/btnhoraMODTM"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:onClick="SeleccionarHora"
        android:text="@string/hora"
        app:layout_constraintStart_toEndOf="@+id/txtfechaMODTM"
        app:layout_constraintTop_toBottomOf="@+id/tvfecharMODTM" />

    <Button
        android:id="@+id/btnrecordatorioMODTM"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:onClick="Recordatorio"
        android:text="@string/recordatorio"
        app:layout_constraintStart_toEndOf="@+id/tvfecharMODTM"
        app:layout_constraintTop_toBottomOf="@+id/txttituloMODTM"/>

    <EditText
        android:id="@+id/txthoraMODTM"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/vacio"
        android:inputType="none"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btnhoraMODTM"
        app:layout_constraintTop_toBottomOf="@+id/tvfecharMODTM" />

    <TextView
        android:id="@+id/tvlistamultimediasMODTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/multimedias"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvmultimediaMODTM" />


    <TextView
        android:id="@+id/tvmultimediaMODTM"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/multimedia"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfechaMODTM" />

    <Button
        android:id="@+id/btncamaraMODTM"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:onClick="TomarFoto"
        android:text="@string/camara"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvmultimediaMODTM"
        app:layout_constraintTop_toBottomOf="@+id/btnfechaMODTM" />

    <Button
        android:id="@+id/btnvideoMODTM"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:onClick="TomarVideo"
        android:text="@string/video"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btncamaraMODTM"
        app:layout_constraintTop_toBottomOf="@+id/btnfechaMODTM" />

    <Button
        android:id="@+id/btnaudioMODTM"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:onClick="GrabarAudio"
        android:text="@string/audio"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btnvideoMODTM"
        app:layout_constraintTop_toBottomOf="@+id/btnhoraMODTM" />

    <Button
        android:id="@+id/btngaleriaMODTM"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:onClick="CargarImagen"
        android:text="@string/galeria"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btnaudioMODTM"
        app:layout_constraintTop_toBottomOf="@+id/btnhoraMODTM" />

    <EditText
        android:id="@+id/txtdescripcionMODTM"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:textColorHint="#020202"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvmultimediasMODTM" />

    <Button
        android:id="@+id/btnguardarMODTM"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="515dp"
        android:background="#0DD115"
        android:onClick="Guardar"
        android:text="@string/guardar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvmultimediasMODTM"
        android:layout_width="409dp"
        android:layout_height="139dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvlistamultimediasMODTM" />

</androidx.constraintlayout.widget.ConstraintLayout>