<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6A4"
    tools:context=".MostrarTareaM">

    <EditText
        android:id="@+id/txtTituloMTM"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titulo"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:focusable="false"
        android:inputType="none"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvfecharMTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/fecharealizacion"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloMTM" />

    <TextView
        android:id="@+id/tvfechadatosMTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/vacio"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tvfecharMTM"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloMTM" />

    <EditText
        android:id="@+id/txtdescripcionMTM"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:focusable="false"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvfecharMTM" />

    <TextView
        android:id="@+id/tvlistamultimediaMTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/multimedias"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdescripcionMTM" />

    <ListView
        android:id="@+id/lvmultimediasMTM"
        android:layout_width="409dp"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvlistamultimediaMTM" />
</androidx.constraintlayout.widget.ConstraintLayout>